Tried to fix gap between her and welcom and then adjusted margin on nav list

--- a/index.css
+++ b/index.css
@@ -29,7 +29,7 @@ body {
     display: flex;
     justify-content: flex-end;
     list-style-type: none;
-    margin-right: 1rem;
+    margin-right: 1.8rem;
   
 }
 .nav-list a {
@@ -46,9 +46,13 @@ body {
 .nav-list a:active {
     background-color: blue;
 }
+#hero {
+    margin-bottom: 0;
+}
+
 #welcome-section {
     background: linear-gradient(#1A8693, #D9BB62 100%);
-    height: 100vh;
+    height: 60vh;
     display: flex;
     flex-direction: column;
     justify-content: center;
